# oz-backend-track-15

./: .gitignore
08-Flask/lecture/day01/: app.py
08-Flask/lecture/day01/02_name/: app.py  test.py
08-Flask/lecture/day01/03_route/: app.py
08-Flask/lecture/day01/04_jinja/: app.py
08-Flask/lecture/day01/04_jinja/templates/: index.html
08-Flask/lecture/day02/13_jsonify/: app.py
08-Flask/lecture/day02/14_restfulapi/: app.py
08-Flask/lecture/day02/15_smorestapi/: README.md  abort_test.py  api.py  app.py
09-FastAPI/lecture/day01/FastAPIProject/: pyproject.toml  temp.py
09-FastAPI/lecture/day2/: .coverage  pyproject.toml  temp.py  test.sh  test_simple.py  test_temp.py
09-FastAPI/live-session/my_blog_api/: .env  pyproject.toml  st.sh
09-FastAPI/live-session/my_blog_api/app/: main.py
09-FastAPI/live-session/my_blog_api/app/crud/: post.py  user.py
09-FastAPI/live-session/my_blog_api/app/db/: session.py
09-FastAPI/live-session/my_blog_api/app/models/: post.py  user.py
09-FastAPI/live-session/my_blog_api/app/schemas/: token.py  user.py
09-FastAPI/live-session/my_blog_api/app/utils/: security.py
12-Django/lecture/: pyenv 사용법.md
12-Django/lecture/day01/bookmark/: pyproject.toml
12-Django/lecture/day02/blog/: pyproject.toml
12-Django/lecture/day02/blog/blog/: admin.py  cb_views.py  fbv_urls.py  models.py  urls.py  views.py
12-Django/lecture/day02/blog/blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py
12-Django/lecture/day02/blog/config/: settings.py  urls.py
12-Django/lecture/day02/blog/member/: views.py
12-Django/lecture/day02/blog/templates/: base.html  blog_create.html  blog_detail.html  blog_list.html  blog_update.html  test_get.html  test_post.html
12-Django/lecture/day02/blog/templates/registration/: login.html  signup.html
12-Django/lecture/oz/blog/: pyproject.toml
12-Django/lecture/oz/blog/blog/: admin.py  (+3 more)
12-Django/lecture/oz/bookmark/: README.md  db.sqlite3-journal  pyproject.toml
12-Django/task/todo_app/: .gitignore  pyproject.toml
12-Django/task/todo_app/config/: settings.py  urls.py
12-Django/task/todo_app/todo/: admin.py  models.py  views.py
12-Django/task/todo_app/users/: views.py
(+40 files in other folders)
