[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["dotory-60 <busdotory@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.9"
ipython = "^9.7.0"
django-extensions = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
